# gtk-rs-core

./: .gitignore  .gitmodules  .typos.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  deny.toml  index.html
cairo/: Cargo.toml  README.md
cairo/src/: constants.rs  context.rs  device.rs  enums.rs  error.rs  image_surface.rs  image_surface_png.rs  lib.rs  matrices.rs  paths.rs  patterns.rs  pdf.rs  ps.rs  quartz_surface.rs  recording_surface.rs  rectangle.rs  rectangle_int.rs  region.rs  stream.rs  surface.rs  surface_macros.rs  surface_png.rs  svg.rs  user_data.rs  utils.rs  win32_surface.rs  xcb.rs
cairo/sys/: Cargo.toml  build.rs
examples/: Cargo.toml  README.md
examples/gio_action_impl/: action.rs  main.rs
examples/gio_async_tls/: main.rs
examples/gio_cancellable_future/: README.md  main.rs
examples/gio_dbus_object_manager/: README.md  block_proxy.rs  drive_proxy.rs  main.rs  object_manager.rs  utils.rs
examples/gio_dbus_receive_signals/: main.rs
examples/gio_dbus_register_object/: hello_world.rs  main.rs
examples/gio_futures/: main.rs
examples/gio_futures_await/: main.rs
examples/gio_task/: README.md  main.rs
examples/gio_vfs/: README.md  file.rs  file_enumerator.rs  file_monitor.rs  lib.rs  vfs.rs
examples/object_subclass/: author.rs  main.rs
examples/virtual_methods/: cat.rs  main.rs  pet.rs  purrable.rs  tabby_cat.rs
gdk-pixbuf/: Cargo.toml  Cargo.toml~  Gir.toml  README.md
gdk-pixbuf/src/: lib.rs  pixbuf.rs  pixbuf_animation.rs  pixbuf_animation_iter.rs  prelude.rs
gdk-pixbuf/sys/: Cargo.toml  Gir.toml  versions.txt
gio/: Cargo.toml  Gir.toml  README.md
gio-macros/: Cargo.toml
gio-macros/src/: actions.rs  lib.rs  utils.rs
gio-macros/tests/: actions.rs  async_actions.rs
gio-unix/: Cargo.toml  Gir.toml  README.md
gio-unix/src/: desktop_app_info.rs  fd_message.rs  file_descriptor_based.rs  input_stream.rs  lib.rs  mount_entry.rs  mount_point.rs  output_stream.rs
gio-unix/sys/: Cargo.toml  Gir.toml  versions.txt
gio-win32/: Cargo.toml  Gir.toml  README.md
gio-win32/src/: input_stream.rs  lib.rs  output_stream.rs
gio-win32/sys/: Cargo.toml  Gir.toml
gio/src/: action_entry.rs  action_map.rs  app_info.rs  application.rs  application_command_line.rs  async_initable.rs  cancellable.rs  cancellable_future.rs  converter.rs  credentials.rs  data_input_stream.rs  datagram_based.rs  dbus.rs  dbus_annotation_info.rs  dbus_arg_info.rs  dbus_connection.rs  dbus_interface_info.rs  dbus_method_info.rs  dbus_method_invocation.rs  dbus_node_info.rs  dbus_object_manager_client.rs  dbus_property_info.rs  dbus_proxy.rs  dbus_signal_info.rs  debug_controller_dbus.rs  desktop_app_info.rs  error.rs  file.rs  file_attribute_info.rs  file_attribute_info_list.rs  file_attribute_matcher.rs  file_attribute_value.rs  file_descriptor_based.rs  file_enumerator.rs  file_info.rs  gio_future.rs  inet_address.rs  inet_socket_address.rs  initable.rs  input_stream.rs  (+39 more)
gio/sys/: Cargo.toml  Gir.toml  versions.txt
gio/tests/: dbus_peer.rs  file.rs  file_enumerator.rs  file_monitor.rs  std_io_copy.rs  vfs.rs
glib/: Cargo.toml  Gir.toml  Gir_GObject.toml  README.md
glib-build-tools/: Cargo.toml  README.md
glib-build-tools/src/: lib.rs
glib-macros/: Cargo.toml
glib-macros/src/: async_test.rs  boxed_derive.rs  class_handler.rs  clone.rs  clone_block_attribute.rs  clone_old.rs  closure.rs  closure_old.rs  derived_properties_attribute.rs  derived_signals_attribute.rs  enum_derive.rs  error_domain_derive.rs  flags_attribute.rs  gboxed_derive.rs  gboxed_shared_derive.rs  genum_derive.rs  gerror_domain_derive.rs  gflags_attribute.rs  gvariant_derive.rs  lib.rs  object_impl_attributes.rs  object_impl_derive.rs  object_interface_attribute.rs  object_subclass_attribute.rs  param_spec_builder.rs  properties.rs  props.rs  shared_boxed_derive.rs  signals.rs  signals_attribute.rs  thread_local_object.rs  use_derived_properties_attribute.rs  utils.rs  value_delegate_derive.rs  variant_derive.rs  wrapper_attribute.rs
glib-macros/tests/: clone.rs  clone_block.rs  clone_block_closures.rs  closure.rs  dynamic_enums.rs  dynamic_objects.rs  enum_dynamic.rs  flags_dynamic.rs  object_interface_generic.rs  object_subclass_dynamic.rs  object_subclass_generic.rs  properties.rs  props.rs  signals.rs  test.rs  value_delegate_derive.rs
glib-unix/: Cargo.toml  Gir.toml  README.md
glib-unix/src/: functions.rs  lib.rs
glib-unix/sys/: Cargo.toml  Gir.toml
glib-win32/: Cargo.toml  Gir.toml  README.md
glib-win32/src/: functions.rs  lib.rs
glib-win32/sys/: Cargo.toml  Gir.toml  versions.txt
glib/benches/: gstring.rs
glib/clone_tests/: clone_compilation_errors.py
glib/gobject-sys/: Cargo.toml  Gir.toml  build.rs  build_manual.rs  versions.txt
glib/src/: any_gobject.rs  array.rs  bookmark_file.rs  boxed.rs  boxed_any_object.rs  boxed_inline.rs  bridged_logging.rs  byte_array.rs  bytes.rs  char.rs  checksum.rs  clone.rs  closure.rs  collections.rs  construct_cell.rs  control_flow.rs  convert.rs  date.rs  date_time.rs  enums.rs  error.rs  exit_code.rs  functions.rs  future_with_timeout.rs  gstring.rs  gstring_builder.rs  key_file.rs  lib.rs  log.rs  main_context.rs  main_context_channel.rs  main_context_futures.rs  manual_functions.rs  match_info.rs  object.rs  param_spec.rs  prelude.rs  property.rs  props.rs  quark.rs  (+24 more)
glib/sys/: Cargo.toml  Gir.toml  versions.txt
glib/tests/: bridged_logging.rs  clone.rs  log.rs  param_spec.rs  print.rs  regex_compiletest.rs  structured_log.rs  subclass_compiletest.rs  unicollate.rs  value.rs
graphene/: Cargo.toml  Gir.toml  README.md
graphene/src/: box2_d.rs  box_.rs  euler.rs  frustum.rs  lib.rs  matrix.rs  plane.rs  point.rs  point3_d.rs  prelude.rs  quad.rs  quaternion.rs  ray.rs  rect.rs  size.rs  sphere.rs  triangle.rs  vec2.rs  vec3.rs  vec4.rs
graphene/sys/: Cargo.toml  Gir.toml  versions.txt
pango/: Cargo.toml  Gir.toml  README.md
pango/src/: analysis.rs  attr_class.rs  attr_color.rs  attr_float.rs  attr_font_desc.rs  attr_font_features.rs  attr_int.rs  lib.rs  (+26 more)
pangocairo/: Cargo.toml  Gir.toml  README.md
(+211925 files in other folders)
