[workspace]
resolver = "2"

default-members = [
  "cairo",
  "cairo/sys",
  "gdk-pixbuf",
  "gdk-pixbuf/sys",
  "gio",
  "gio/sys",
  "gio-unix",
  "gio-unix/sys",
  "glib-build-tools",
  "glib",
  "glib/gobject-sys",
  "glib/sys",
  "glib-macros",
  "glib-unix",
  "glib-unix/sys",
  "graphene",
  "graphene/sys",
  "examples",
  "pango",
  "pango/sys",
  "pangocairo",
  "pangocairo/sys",
]

members = [
  "cairo",
  "cairo/sys",
  "gdk-pixbuf",
  "gdk-pixbuf/sys",
  "gio",
  "gio/sys",
  "gio-unix",
  "gio-unix/sys",
  "gio-win32",
  "gio-win32/sys",
  "glib-build-tools",
  "glib",
  "glib/gobject-sys",
  "glib/sys",
  "glib-macros",
  "glib-unix",
  "glib-unix/sys",
  "glib-win32",
  "glib-win32/sys",
  "graphene",
  "graphene/sys",
  "examples",
  "pango",
  "pango/sys",
  "pangocairo",
  "pangocairo/sys",
]

exclude = ["gir", "checker"]

[workspace.package]
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.22.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
exclude = ["gir-files/*"]
edition = "2021"
rust-version = "1.86"

[workspace.dependencies]
libc = "0.2"
bitflags = "2.10"
gir-format-check = "^0.1"
glib-sys = { path = "glib/sys", version = "0.22" }
gobject-sys = { path = "glib/gobject-sys", version = "0.22" }
glib = { path = "glib", version = "0.22", default-features = false }
gio-sys = { path = "gio/sys", version = "0.22" }
gio = { path = "gio", version = "0.22" }
pango-sys = { path = "pango/sys", version = "0.22" }
pango = { path = "pango", version = "0.22" }
pangocairo-sys = { path = "pangocairo/sys", version = "0.22" }
cairo-sys-rs = { path = "cairo/sys", version = "0.22" }
cairo-rs = { path = "cairo", version = "0.22" }
glib-macros = { path = "glib-macros", version = "0.22", default-features = false }
gdk-pixbuf-sys = { path = "gdk-pixbuf/sys", version = "0.22" }
graphene-sys = { path = "graphene/sys", version = "0.22" }
