[workspace]
resolver = "3"

default-members = [
  "cairo",
  "cairo/sys",
  "gdk-pixbuf",
  "gdk-pixbuf/sys",
  "gio",
  "gio/sys",
  "gio-unix",
  "gio-unix/sys",
  "glib-build-tools",
  "glib",
  "glib/gobject-sys",
  "glib/sys",
  "glib-macros",
  "glib-unix",
  "glib-unix/sys",
  "graphene",
  "graphene/sys",
  "examples",
  "pango",
  "pango/sys",
  "pangocairo",
  "pangocairo/sys",
]

members = [
  "cairo",
  "cairo/sys",
  "gdk-pixbuf",
  "gdk-pixbuf/sys",
  "gio",
  "gio/sys",
  "gio-unix",
  "gio-unix/sys",
  "gio-win32",
  "gio-win32/sys",
  "glib-build-tools",
  "glib",
  "glib/gobject-sys",
  "glib/sys",
  "glib-macros",
  "glib-unix",
  "glib-unix/sys",
  "glib-win32",
  "glib-win32/sys",
  "graphene",
  "graphene/sys",
  "examples",
  "pango",
  "pango/sys",
  "pangocairo",
  "pangocairo/sys",
]

exclude = ["gir", "checker"]

[workspace.package]
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.22.0-alpha.2"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
exclude = ["gir-files/*"]
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
libc = "0.2"
bitflags = "2.10"
gir-format-check = "^0.1"
glib-sys = { path = "glib/sys", version = "0.22.0-alpha" }
glib-unix-sys = { path = "glib-unix/sys", version = "0.22.0-alpha" }
glib-win32-sys = { path = "glib-win32/sys", version = "0.22.0-alpha" }
gobject-sys = { path = "glib/gobject-sys", version = "0.22.0-alpha" }
glib = { path = "glib", version = "0.22.0-alpha.2", default-features = false }
glib-unix = { path = "glib-unix", version = "0.22.0-alpha" }
glib-win32 = { path = "glib-win32", version = "0.22.0-alpha" }
gio-sys = { path = "gio/sys", version = "0.22.0-alpha" }
gio-unix-sys = { path = "gio-unix/sys", version = "0.22.0-alpha" }
gio-win32-sys = { path = "gio-win32/sys", version = "0.22.0-alpha" }
gio = { path = "gio", version = "0.22.0-alpha" }
gio-unix = { path = "gio-unix", version = "0.22.0-alpha" }
gio-win32 = { path = "gio-win32", version = "0.22.0-alpha" }
pango-sys = { path = "pango/sys", version = "0.22.0-alpha" }
pango = { path = "pango", version = "0.22.0-alpha" }
pangocairo-sys = { path = "pangocairo/sys", version = "0.22.0-alpha" }
cairo-sys-rs = { path = "cairo/sys", version = "0.22.0-alpha" }
cairo-rs = { path = "cairo", version = "0.22.0-alpha" }
glib-macros = { path = "glib-macros", version = "0.22.0-alpha", default-features = false }
gdk-pixbuf-sys = { path = "gdk-pixbuf/sys", version = "0.22.0-alpha" }
graphene-sys = { path = "graphene/sys", version = "0.22.0-alpha" }
