[package]
name = "cairo-rs"
keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/cairo/"
description = "Rust bindings for the Cairo library"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "cairo"

[features]
png = ["ffi/png"]
pdf = ["ffi/pdf"]
svg = ["ffi/svg"]
ps = ["ffi/ps"]
use_glib = ["glib", "ffi/use_glib"]
v1_16 = ["ffi/v1_16"]
v1_18 = ["v1_16", "ffi/v1_18"]
default = ["use_glib"]
freetype = ["ffi/freetype", "freetype-rs"]
script = ["ffi/script"]
xcb = ["ffi/xcb"]
xlib = ["ffi/xlib"]
win32-surface = ["ffi/win32-surface"]

[dependencies.glib]
optional = true
workspace = true

[dependencies]
ffi = { package = "cairo-sys-rs", path = "sys", version = "0.19" }
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
freetype-rs = { version = "0.35", optional = true }

[dev-dependencies]
tempfile = "3.9"
float_eq = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
