[package]
name = "gtk-rs-examples"
version = "0.0.1"
authors = ["The gtk-rs Project Developers"]
edition = "2021"
rust-version = "1.63"

[dependencies]
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"

[dependencies.glib]
path = "../glib"

[dependencies.gio]
path = "../gio"

[dependencies.async-tls]
version = "0.11"
optional = true

[build-dependencies.glib-build-tools]
path = "../glib-build-tools"


[[bin]]
name = "gio_async_tls"
path = "gio_async_tls/main.rs"
required-features = ["async-tls"]

[[bin]]
name = "gio_futures"
path = "gio_futures/main.rs"

[[bin]]
name = "gio_futures_await"
path = "gio_futures_await/main.rs"

[[bin]]
name = "gio_task"
path = "gio_task/main.rs"

[[bin]]
name = "gio_cancellable_future"
path = "gio_cancellable_future/main.rs"
