[package]
name = "gtk-rs-examples"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
glib.workspace = true
gio.workspace = true

[dependencies.async-tls]
version = "0.13"
optional = true

[build-dependencies.glib-build-tools]
path = "../glib-build-tools"

[[bin]]
name = "gio_async_tls"
path = "gio_async_tls/main.rs"
required-features = ["async-tls"]

[[bin]]
name = "gio_cancellable_future"
path = "gio_cancellable_future/main.rs"

[[bin]]
name = "gio_futures"
path = "gio_futures/main.rs"

[[bin]]
name = "gio_futures_await"
path = "gio_futures_await/main.rs"

[[bin]]
name = "gio_dbus_register_object"
path = "gio_dbus_register_object/main.rs"

[[bin]]
name = "gio_task"
path = "gio_task/main.rs"

[[bin]]
name = "object_subclass"
path = "object_subclass/main.rs"

[[bin]]
name = "virtual_methods"
path = "virtual_methods/main.rs"
