[package]
name = "gdk-pixbuf"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["gdk-pixbuf", "gtk-rs", "gnome"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gdk_pixbuf/"
version = "0.17.0"
description = "Rust bindings for the GdkPixbuf library"
repository = "https://github.com/gtk-rs/gtk-rs-core"
exclude = [
    "gir-files/*",
]
edition = "2021"
rust-version = "1.64"

[lib]
name = "gdk_pixbuf"

[features]
v2_40 = ["ffi/v2_40"]
v2_42 = ["v2_40", "ffi/v2_42"]
dox = ["glib/dox", "gio/dox", "ffi/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.3"
ffi = { package = "gdk-pixbuf-sys", path = "sys" }
glib = { path = "../glib" }
gio = { path = "../gio" }
once_cell = "1"

[dev-dependencies]
gir-format-check = "^0.1"
