[package]
name = "gdk-pixbuf"
keywords = ["gdk-pixbuf", "gtk-rs", "gnome"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gdk_pixbuf/"
description = "Rust bindings for the GdkPixbuf library"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gdk_pixbuf"

[features]
v2_40 = ["ffi/v2_40"]
v2_42 = ["v2_40", "ffi/v2_42"]

[dependencies]
ffi = { package = "gdk-pixbuf-sys", path = "sys", version = "0.19" }
libc.workspace = true
glib.workspace = true
gio.workspace = true

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
