[package]
name = "gio-macros"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio_macros/"
description = "Rust bindings for the Gio library, proc macros crate"
keywords = ["glib", "gio", "gtk-rs", "gnome"]
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["proc_macro_crate"]
proc_macro_crate = ["proc-macro-crate"]

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.113", features = ["full"] }
proc-macro-crate = { version = "3.5", optional = true }

[lib]
proc-macro = true

[dev-dependencies]
gio.workspace = true
trybuild2 = "1.3"
