[package]
name = "gio-unix"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gio-unix/"
description = "Rust bindings for the GioUnix library"
readme = "README.md"
keywords = ["gio", "gtk-rs", "gnome", "GUI"]
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
gio-unix-sys.workspace = true
libc.workspace = true
glib.workspace = true
gio.workspace = true

[dev-dependencies]
tempfile = "3"
gir-format-check.workspace = true

[features]
default = []
v2_58 = ["gio-unix-sys/v2_58", "gio/v2_58"]
v2_60 = ["v2_58", "gio-unix-sys/v2_60", "gio/v2_60"]
v2_66 = ["v2_60", "gio-unix-sys/v2_66", "gio/v2_66"]
v2_82 = ["v2_66", "gio-unix-sys/v2_82", "gio/v2_82"]
v2_84 = ["v2_82", "gio-unix-sys/v2_84", "gio/v2_84"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

