[package]
name = "glib-unix"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib-unix/"
description = "Rust bindings for the GLibUnix library"
readme = "README.md"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
glib-unix-sys.workspace = true
libc.workspace = true
glib.workspace = true
futures-core = { version = "0.3", default-features = false, optional = true}

[dev-dependencies]
tempfile = "3"
gir-format-check.workspace = true

[features]
default = ["futures"]
futures = ["glib/futures", "dep:futures-core"]
v2_80 = ["glib-unix-sys/v2_80", "glib/v2_80"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
