[package]
name = "glib-win32"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib-win32/"
description = "Rust bindings for the GLibWin32 library"
readme = "README.md"
keywords = ["glib-win32", "gtk-rs", "gnome", "GUI"]
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ffi = { package = "glib-win32-sys", path = "./sys"}
libc.workspace = true
glib.workspace = true

[dev-dependencies]
tempfile = "3"
gir-format-check.workspace = true

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
