[package]
name = "glib"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
description = "Rust bindings for the GLib library"
readme = "README.md"
version = "0.18.5"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
exclude = [
    "gir-files/*",
]
edition = "2021"
rust-version = "1.70"

[lib]
name = "glib"

[dependencies]
once_cell = "1.0"
libc = "0.2"
bitflags = "2.3"
futures-core = { version = "0.3", default-features = false }
futures-task = { version = "0.3", default-features = false }
futures-executor = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
ffi = { package = "glib-sys", version = "0.18", path = "sys" }
gobject_ffi = { package = "gobject-sys", version = "0.18", path = "gobject-sys" }
glib-macros = { path = "../glib-macros", version = "0.18" }
rs-log = { package = "log", version = "0.4", optional = true }
smallvec = { version = "1.0", features = ["union", "const_generics", "const_new"] }
thiserror = "1"
gio_ffi = { package = "gio-sys", path = "../gio/sys", version = "0.18", optional = true }
memchr = "2.5.0"

[dev-dependencies]
tempfile = "3"
gir-format-check = "^0.1"
trybuild2 = "1"
criterion = "0.5.1"

[features]
default = ["gio"]
v2_58 = ["ffi/v2_58", "gobject_ffi/v2_58"]
v2_60 = ["v2_58", "ffi/v2_60"]
v2_62 = ["v2_60", "ffi/v2_62", "gobject_ffi/v2_62"]
v2_64 = ["v2_62", "ffi/v2_64"]
v2_66 = ["v2_64", "ffi/v2_66", "gobject_ffi/v2_66"]
v2_68 = ["v2_66", "ffi/v2_68", "gobject_ffi/v2_68"]
v2_70 = ["v2_68", "ffi/v2_70", "gobject_ffi/v2_70"]
v2_72 = ["v2_70", "ffi/v2_72", "gobject_ffi/v2_72"]
v2_74 = ["v2_72", "ffi/v2_74", "gobject_ffi/v2_74"]
v2_76 = ["v2_74", "ffi/v2_76", "gobject_ffi/v2_76"]
v2_78 = ["v2_76", "ffi/v2_78", "gobject_ffi/v2_78"]
log = ["rs-log"]
log_macros = ["log"]
compiletests = []
gio = ["gio_ffi"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[[test]]
name = "subclass_compiletest"
required-features = ["compiletests"]

[[bench]]
name = "gstring"
harness = false
