[package]
name = "glib"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib/"
description = "Rust bindings for the GLib library"
readme = "README.md"
keywords = ["glib", "gtk-rs", "gnome", "GUI"]
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "glib"

[dependencies]
libc.workspace = true
bitflags.workspace = true
futures-core = { version = "0.3", default-features = false }
futures-task = { version = "0.3", default-features = false }
futures-executor = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
ffi = { package = "glib-sys", path = "sys", version = "0.19"}
gobject_ffi = { package = "gobject-sys", path = "gobject-sys", version = "0.19" }
glib-macros.workspace = true
rs-log = { package = "log", version = "0.4", optional = true }
smallvec = { version = "1.12", features = ["union", "const_generics", "const_new"] }
thiserror.workspace = true
gio_ffi = { package = "gio-sys", path = "../gio/sys", optional = true, version = "0.19" }
memchr = "2.7.1"

[dev-dependencies]
tempfile = "3"
gir-format-check.workspace = true
trybuild2 = "1"
criterion = "0.5.1"

[features]
default = ["gio"]
v2_58 = ["ffi/v2_58", "gobject_ffi/v2_58"]
v2_60 = ["v2_58", "ffi/v2_60"]
v2_62 = ["v2_60", "ffi/v2_62", "gobject_ffi/v2_62"]
v2_64 = ["v2_62", "ffi/v2_64"]
v2_66 = ["v2_64", "ffi/v2_66", "gobject_ffi/v2_66"]
v2_68 = ["v2_66", "ffi/v2_68", "gobject_ffi/v2_68"]
v2_70 = ["v2_68", "ffi/v2_70", "gobject_ffi/v2_70"]
v2_72 = ["v2_70", "ffi/v2_72", "gobject_ffi/v2_72"]
v2_74 = ["v2_72", "ffi/v2_74", "gobject_ffi/v2_74"]
v2_76 = ["v2_74", "ffi/v2_76", "gobject_ffi/v2_76"]
v2_78 = ["v2_76", "ffi/v2_78", "gobject_ffi/v2_78"]
v2_80 = ["v2_78", "ffi/v2_80", "gobject_ffi/v2_80"]
log = ["rs-log"]
log_macros = ["log"]
compiletests = []
gio = ["gio_ffi"]
unstable-clone-syntax = ["glib-macros/unstable-clone-syntax"]

[[test]]
name = "subclass_compiletest"
required-features = ["compiletests"]

[[bench]]
name = "gstring"
harness = false

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
